[build-system]
requires = ['setuptools >= 61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'gyp'
version = '0.1'
description = 'Generate Your Projects'
authors = [
  { name  = 'Chromium Authors', email = 'chromium-dev@googlegroups.com' }
]
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]

[project.urls]
'Homepage' = 'http://code.google.com/p/gyp'

[project.entry-points.console_scripts]
'gyp' = 'gyp:script_main'

[tool.setuptools.packages.find]
namespaces = true
where = ['pylib/']
